--- a/src/_sass/imports/common.scss
+++ b/src/_sass/imports/common.scss
@@ -243,8 +243,30 @@ $semantic-green: #2d9d78;
   --semantic-orange: #{$orange-400};
   --semantic-green: #{$green-700};
 
-  --console-background: #35434e;
-  --console-color: #dadadf;
+  --base-00: #35434e; // was #1d1f21;
+  --base-01: #282a2e;
+  --base-02: #373b41;
+  --base-03: #969896;
+  --base-04: #b4b7b4;
+  --base-05: #c5c8c6; // base05
+  --base-06: #e0e0e0;
+  --base-07: #ffffff;
+  --base-08: #8abeb7; // base0c
+  --base-09: #de935f;
+  --base-0a: #f0c674;
+  --base-0b: #b5bd68;
+  --base-0c: #cc6666; // base08
+  --base-0d: #81a2be; // base0d
+  --base-0e: #b294bb;
+  --base-0f: #a3685a;
+  
+  --base-red: var(--base-0c);
+  --base-yellow: var(--base-0a);
+  --base-blue: var(--base-0d);
+  --base-green: var(--base-0b);
+
+  --console-background: var(--base-00);
+  --console-color: var(--base-06);
 
 }
 @media (prefers-color-scheme: dark) {
@@ -306,8 +328,8 @@ $semantic-green: #2d9d78;
   --semantic-orange: #{$orange-400};
   --semantic-green: #{$green-700};
 
-  --console-background: #101417;
-  --console-color: #b9b9b9;
+  --base-00: #101417;
+  --base-06: #b9b9b9;
 
 }
 }
