--- a/src/_sass/imports/common.scss
+++ b/src/_sass/imports/common.scss
@@ -248,19 +248,19 @@ $semantic-green: #2d9d78;
   --base-02: #373b41;
   --base-03: #969896;
   --base-04: #b4b7b4;
-  --base-05: #c5c8c6; // base05
+  --base-05: #c5c8c6;
   --base-06: #e0e0e0;
   --base-07: #ffffff;
-  --base-08: #8abeb7; // base0c
+  --base-08: #cc6666; // base0c
   --base-09: #de935f;
   --base-0a: #f0c674;
   --base-0b: #b5bd68;
-  --base-0c: #cc6666; // base08
-  --base-0d: #81a2be; // base0d
+  --base-0c: #8abeb7; // base08
+  --base-0d: #81a2be;
   --base-0e: #b294bb;
   --base-0f: #a3685a;
   
-  --base-red: var(--base-0c);
+  --base-red: var(--base-08);
   --base-yellow: var(--base-0a);
   --base-blue: var(--base-0d);
   --base-green: var(--base-0b);
