--- a/src/_sass/imports/common.scss
+++ b/src/_sass/imports/common.scss
@@ -238,10 +238,10 @@ $semantic-green: #2d9d78;
   --masthead-link-color-hover: var(--link-color-hover);
   --masthead-link-color-active: var(--primary-color);
 
-  --semantic-blue: #{$blue-700};
-  --semantic-red: #{$red-400};
-  --semantic-orange: #{$orange-400};
-  --semantic-green: #{$green-700};
+  --semantic-blue: var(--blue-700);
+  --semantic-red: var(--red-400);
+  --semantic-orange: var(--orange-400);
+  --semantic-green: var(--green-700);
 
   --base-00: #35434e; // was #1d1f21;   // Darker variant: #212a30
   --base-01: #282a2e;
@@ -267,6 +267,128 @@ $semantic-green: #2d9d78;
 
   --console-background: var(--base-00);
   --console-color: var(--base-06);
+
+  --red-50: #{$red-50};
+  --red-100: #{$red-100};
+  --red-200: #{$red-200};
+  --red-300: #{$red-300};
+  --red-400: #{$red-400};
+  --red-500: #{$red-500};
+  --red-600: #{$red-600};
+  --red-700: #{$red-700};
+  --red-800: #{$red-800};
+  --red-900: #{$red-900};
+  --orange-50: #{$orange-50};
+  --orange-100: #{$orange-100};
+  --orange-200: #{$orange-200};
+  --orange-300: #{$orange-300};
+  --orange-400: #{$orange-400};
+  --orange-500: #{$orange-500};
+  --orange-600: #{$orange-600};
+  --orange-700: #{$orange-700};
+  --orange-800: #{$orange-800};
+  --orange-900: #{$orange-900};
+  --brown-50: #{$brown-50};
+  --brown-100: #{$brown-100};
+  --brown-200: #{$brown-200};
+  --brown-300: #{$brown-300};
+  --brown-400: #{$brown-400};
+  --brown-500: #{$brown-500};
+  --brown-600: #{$brown-600};
+  --brown-700: #{$brown-700};
+  --brown-800: #{$brown-800};
+  --brown-900: #{$brown-900};
+  --yellow-50: #{$yellow-50};
+  --yellow-100: #{$yellow-100};
+  --yellow-200: #{$yellow-200};
+  --yellow-300: #{$yellow-300};
+  --yellow-400: #{$yellow-400};
+  --yellow-500: #{$yellow-500};
+  --yellow-600: #{$yellow-600};
+  --yellow-700: #{$yellow-700};
+  --yellow-800: #{$yellow-800};
+  --yellow-900: #{$yellow-900};
+  --lime-50: #{$lime-50};
+  --lime-100: #{$lime-100};
+  --lime-200: #{$lime-200};
+  --lime-300: #{$lime-300};
+  --lime-400: #{$lime-400};
+  --lime-500: #{$lime-500};
+  --lime-600: #{$lime-600};
+  --lime-700: #{$lime-700};
+  --lime-800: #{$lime-800};
+  --lime-900: #{$lime-900};
+  --green-50: #{$green-50};
+  --green-100: #{$green-100};
+  --green-200: #{$green-200};
+  --green-300: #{$green-300};
+  --green-400: #{$green-400};
+  --green-500: #{$green-500};
+  --green-600: #{$green-600};
+  --green-700: #{$green-700};
+  --green-800: #{$green-800};
+  --green-900: #{$green-900};
+  --teal-50: #{$teal-50};
+  --teal-100: #{$teal-100};
+  --teal-200: #{$teal-200};
+  --teal-300: #{$teal-300};
+  --teal-400: #{$teal-400};
+  --teal-500: #{$teal-500};
+  --teal-600: #{$teal-600};
+  --teal-700: #{$teal-700};
+  --teal-800: #{$teal-800};
+  --teal-900: #{$teal-900};
+  --cyan-50: #{$cyan-50};
+  --cyan-100: #{$cyan-100};
+  --cyan-200: #{$cyan-200};
+  --cyan-300: #{$cyan-300};
+  --cyan-400: #{$cyan-400};
+  --cyan-500: #{$cyan-500};
+  --cyan-600: #{$cyan-600};
+  --cyan-700: #{$cyan-700};
+  --cyan-800: #{$cyan-800};
+  --cyan-900: #{$cyan-900};
+  --blue-50: #{$blue-50};
+  --blue-100: #{$blue-100};
+  --blue-200: #{$blue-200};
+  --blue-300: #{$blue-300};
+  --blue-400: #{$blue-400};
+  --blue-500: #{$blue-500};
+  --blue-600: #{$blue-600};
+  --blue-700: #{$blue-700};
+  --blue-800: #{$blue-800};
+  --blue-900: #{$blue-900};
+  --indigo-50: #{$indigo-50};
+  --indigo-100: #{$indigo-100};
+  --indigo-200: #{$indigo-200};
+  --indigo-300: #{$indigo-300};
+  --indigo-400: #{$indigo-400};
+  --indigo-500: #{$indigo-500};
+  --indigo-600: #{$indigo-600};
+  --indigo-700: #{$indigo-700};
+  --indigo-800: #{$indigo-800};
+  --indigo-900: #{$indigo-900};
+  --purple-50: #{$purple-50};
+  --purple-100: #{$purple-100};
+  --purple-200: #{$purple-200};
+  --purple-300: #{$purple-300};
+  --purple-400: #{$purple-400};
+  --purple-500: #{$purple-500};
+  --purple-600: #{$purple-600};
+  --purple-700: #{$purple-700};
+  --purple-800: #{$purple-800};
+  --purple-900: #{$purple-900};
+  --magenta-50: #{$magenta-50};
+  --magenta-100: #{$magenta-100};
+  --magenta-200: #{$magenta-200};
+  --magenta-300: #{$magenta-300};
+  --magenta-400: #{$magenta-400};
+  --magenta-500: #{$magenta-500};
+  --magenta-600: #{$magenta-600};
+  --magenta-700: #{$magenta-700};
+  --magenta-800: #{$magenta-800};
+  --magenta-900: #{$magenta-900};
+  
 
 }
 @media (prefers-color-scheme: dark) {
