--- a/src/_sass/imports/minimal-mistakes/_reset.scss
+++ b/src/_sass/imports/minimal-mistakes/_reset.scss
@@ -13,13 +13,13 @@ html {
     background-color: var(--page-background);
     font-size: 16px;
 
-    @include breakpoint($medium) {
-        font-size: 18px;
-    }
+    // @include breakpoint($medium) {
+    //     font-size: 18px;
+    // }
 
-    @include breakpoint($large) {
-        font-size: 20px;
-    }
+    // @include breakpoint($large) {
+    //     font-size: 20px;
+    // }
 
     // @include breakpoint($x-large) {
     //   font-size: 22px;
