feat: improved page load time, avoid double-loading modules

--- a/src/_layouts/single.html
+++ b/src/_layouts/single.html
@@ -63,18 +63,20 @@ layout: default
 </div>
 
 <script type="module">
-  import { renderMathInDocument } from '//unpkg.com/mathlive?module';
+  // import { renderMathInDocument } from '//unpkg.com/mathlive?module';
   window.addEventListener('DOMContentLoaded', (event) => {
-    renderMathInDocument({ 
-      renderAccessibleContent: false,
-      TeX: { 
-        delimiters: {
-          inline: [['\\(', '\\)']],
-          display: [ ['$$', '$$'], ['\\[', '\\]']],
+    import('//unpkg.com/mathlive?module').then((module) => {
+      module.renderMathInDocument({ 
+        renderAccessibleContent: false,
+        TeX: { 
+          delimiters: {
+            inline: [['\\(', '\\)']],
+            display: [ ['$$', '$$'], ['\\[', '\\]']],
+          },
+          processEnvironments : false 
         },
-        processEnvironments : false 
-      },
-      asciiMath: null,
-    });
+        asciiMath: null,
+      })
+    })
   });
 </script>
