--- a/src/_sass/imports/tables.scss
+++ b/src/_sass/imports/tables.scss
@@ -44,7 +44,7 @@
 .symbols-table table {
   table-layout: auto;
   tr td:first-child {
-    min-width: 15ex;
+    min-width: var(--first-col-width, 15ex);
   }
 }
 
