--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -91,10 +91,10 @@ body {
         margin-bottom: 1em;
         margin-left: 0;
         margin-right: 0;
-      @include breakpoint($large) {
-          margin-left: 1em;
-          margin-right: 1em;
-        }
+      // @include breakpoint($large) {
+      //     margin-left: 1em;
+      //     margin-right: 1em;
+      //   }
       }
   }
 }
