--- a/src/_sass/imports/common.scss
+++ b/src/_sass/imports/common.scss
@@ -13,6 +13,7 @@ $h4-font-size: 18px;
 $h5-font-size: 16px;
 $subheading-font-size: 11px;
 
+$global-transition: none;
 
 
 $gray-25: #131416;  
@@ -177,10 +178,10 @@ $semantic-orange: #e68619;
 $semantic-green: #2d9d78;
 
 :root {
-  --monospace-font: 'IBM Plex Mono', 'Fira Code', monospace;
-  --sans-serif-font: 'IBM Plex Sans', 'Source Sans Pro', sans-serif;
-  --body-font: 'IBM Plex Sans', 'Source Sans Pro', sans-serif;
-  --display-font: 'IBM Plex Sans', 'Source Sans Pro', sans-serif;
+  --monospace-font: 'JetBrains Mono', 'IBM Plex Mono', 'Fira Code', monospace;
+  --sans-serif-font: 'Source Sans Pro', 'IBM Plex Sans', sans-serif;
+  --body-font: 'Source Sans Pro', 'IBM Plex Sans', sans-serif;
+  --display-font: 'Source Sans Pro', 'IBM Plex Sans', sans-serif;
   --ui-font: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
 
