feat: improved performance of page load, accessibility

--- a/src/_includes/head/custom.html
+++ b/src/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <link rel="preconnect" href="https://kit.fontawesome.com">
-<script src="https://kit.fontawesome.com/523e3eb8bb.js" crossorigin="anonymous"></script>
+<script defer src="https://kit.fontawesome.com/523e3eb8bb.js" crossorigin="anonymous"></script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
