--- a/src/_sass/imports/code-theme.scss
+++ b/src/_sass/imports/code-theme.scss
@@ -44,7 +44,7 @@ $base05: #c5c8c6; // base05
 $base06: #e0e0e0;
 $base07: #ffffff;
 $base0c: #cc6666; // base08
-$base09: #de935f;
+$base09: #ec9c65; // was #de935f;
 $base0a: #f0c674;
 $base0b: #b5bd68;
 $base08: #8abeb7; // base0c
