--- a/src/_includes/seo.html
+++ b/src/_includes/seo.html
@@ -7,7 +7,7 @@
 </title>
 <meta name="description" content="{{ seo_description }}" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECEC8YT7XS"></script>
-<script>
+<script async>
   if(/cortexjs\.io/.test(window.location.hostname)) {
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
