--- a/src/_sass/imports/common.scss
+++ b/src/_sass/imports/common.scss
@@ -253,7 +253,7 @@ $semantic-green: #2d9d78;
   --base-06: #e0e0e0;
   --base-07: #ffffff;
   --base-08: #cc6666; // base0c
-  --base-09: #de935f;
+  --base-09: $base-09;
   --base-0a: #f0c674;
   --base-0b: #b5bd68;
   --base-0c: #8abeb7; // base08
