--- a/src/_sass/imports/minimal-mistakes/_variables.scss
+++ b/src/_sass/imports/minimal-mistakes/_variables.scss
@@ -127,4 +127,5 @@ $nav-toggle-height: 2rem !default;
 $navicon-width: 1.5rem !default;
 $navicon-height: 0.25rem !default;
 $global-transition: all 0.2s ease-in-out !default;
-$intro-transition: intro 0.3s both !default;
+// $intro-transition: intro 0.3s both !default;
+$intro-transition: none;
