--- a/src/_sass/imports/minimal-mistakes-overrides.scss
+++ b/src/_sass/imports/minimal-mistakes-overrides.scss
@@ -4,7 +4,10 @@
 .greedy-nav a.site-title {
     font-family: var(--display-font);
     font-weight: 900;
-    font-size: 20px;
+    font-size: 32px;
+    line-height: 1;
+    margin-left: 0;
+    margin-right: 0;
     color: var(--blue-800);
     @media (prefers-color-scheme: dark) {
       color: var(--blue-50);
