doc: adjusted wide layout

--- a/src/_sass/imports/minimal-mistakes/_navigation.scss
+++ b/src/_sass/imports/minimal-mistakes/_navigation.scss
@@ -211,8 +211,11 @@
         }
         li:hover {
           background: var(--ui-background-hover);
+          color: var(--masthead-link-color-hover);
         }
-
+        li:hover a {
+          color: var(--masthead-link-color-hover);
+        }
         a {
             position: relative;
 
