--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -41,7 +41,7 @@ body {
   display: flex;
   max-width: 840px;
   width: 100%;
-  margin: 0;
+  margin: 0 8px 0 0 ;
   
   // @include breakpoint($large) {
   //   float: right;
