feat: reduce code playground font-size

--- a/src/_sass/imports/minimal-mistakes-overrides.scss
+++ b/src/_sass/imports/minimal-mistakes-overrides.scss
@@ -49,8 +49,9 @@
 pre {
     margin-bottom: 1em;
     padding: 1em;
-    font-size: .8em;
+    font-size: 14px;
     border-radius: 8px;
     background: var(--console-background);
     color: var(--console-color);
 }
+
