--- a/src/_sass/imports/minimal-mistakes.scss
+++ b/src/_sass/imports/minimal-mistakes.scss
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE)
 */
 
-@import 'code-theme';
+// @import 'code-theme';
 
 
 /* Variables */
